2004-02-13  Atsushi Enomoto  <atsushi@ximian.com>

	* System.Xml.dll.sources : added DTMXPathDocumentWriter.cs.

2004-02-11  Atsushi Enomoto  <atsushi@ximian.com>

	* Mono.System.XML.csproj : updated.

2004-01-14  Atsushi Enomoto  <atsushi@ximian.com>

	* System.Xml.dll.sources : added SchemaDataValueType.cs

2004-01-07  Nick Drochak <ndrochak@ieee.org>

	* Makefile: Don't hide behind the /nowarns.  Fix them.

2004-01-06  Atsushi Enomoto  <atsushi@ximian.com>

	* Makefile : use /noconfig like System.dll (to erase make test warning)

2003-12-18  Lluis Sanchez Gual <lluis@ximian.com>

  * System.Xml_test.dll.sources : Added test files
		System.Xml.Serialization/DeserializeTests.cs
		System.Xml.Serialization/XmlAttributesTests.cs
		System.Xml.Serialization/XmlReflectionImporterTests.cs
		System.Xml.Serialization/XmlSerializationWriterTests.cs

2003-12-17  David Sheldon <dave-mono@earth.li>

  * System.Xml_test.dll.sources : Added XmlSchemaBuiltInDatatypeTests.cs

2003-12-15  Atsushi Enomoto  <ginga@kit.hi-ho.ne.jp>

	* System.Xml.dll.sources :
	  removed UpdateEventHandler.cs and XmlUpdateEventArgs.cs to sqlxml.

2003-12-14  Tim Coleman <tim@timcoleman.com>
	* System.Xml.dll.sources :
		Add files from new System.Xml.Query namespace.

2003-12-11  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* System.Xml.dll.sources : Added ScriptCompilerInfo.cs.

2003-12-08  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* System.Xml_test.dll.sources : patch by David Sheldon. Added XmlSchemaLengthFacetTests.cs.

2003-11-25  Tim Coleman <tim@timcoleman.com>
	* System.Xml.dll.sources: added XmlSchemaBuiltInType.cs

2003-11-19  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* System.Xml.dll.sources: added XPathComparer.cs

2003-11-17  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* System.Xml.dll.sources: added some new .NET 1.2 stuff,
	  and sorted some members of the list.

2003-11-13  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* System.Xml.dll.sources: added HtmlEmitter.cs
